[package]
name = "lessroutes"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
reqwest = "0.10.0-alpha.1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
tokio = "0.2.0-alpha.6"
csv = "1.1"
ipnet = {version = "2.0", features = ["serde"]}
log = "0.4"
simplelog = "^0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8.0"
clap = "~2.33.0"
